crates/fig-lexer/tests/snapshots/integration_tests__realistic__buddy_allocator.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Using
- Ident: core
- ColonColon
- Ident: memory
- Newline
- Const
- Ident: MIN_BLOCK_SIZE
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "16"
    suffix: ~
- Newline
- Const
- Ident: MAX_BLOCK_SIZE
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "4096"
    suffix: ~
- Newline
- Const
- Ident: NUM_LISTS
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "9"
    suffix: ~
- Newline
- Enum
- LBracket
- U8
- RBracket
- Ident: BlockStatus
- Newline
- Indent
- Ident: FREE
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Ident: ALLOCATED
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Ident: SPLIT
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Dedent
- Struct
- Ident: BlockHeader
- Newline
- Indent
- Ident: size
- Colon
- USize
- Newline
- Ident: status
- Colon
- Ident: BlockStatus
- Newline
- Ident: next
- Colon
- Question
- Star
- Mut
- Ident: BlockHeader
- Newline
- Ident: prev
- Colon
- Question
- Star
- Mut
- Ident: BlockHeader
- Newline
- Dedent
- Struct
- Ident: FreeList
- Newline
- Indent
- Ident: head
- Colon
- Question
- Star
- Mut
- Ident: BlockHeader
- Newline
- Dedent
- Export
- Struct
- Ident: BuddyAllocator
- Newline
- Indent
- Ident: arena
- Colon
- Star
- Mut
- U8
- Newline
- Ident: arena_size
- Colon
- USize
- Newline
- Ident: free_lists
- Colon
- LBracket
- Ident: FreeList
- Semicolon
- Ident: NUM_LISTS
- RBracket
- Newline
- Ident: allocations
- Colon
- USize
- Newline
- Ident: deallocations
- Colon
- USize
- Newline
- Dedent
- Func
- Bang
- Ident: BuddyAllocator
- ColonColon
- Ident: new
- LParen
- Ident: arena
- Colon
- Star
- Mut
- U8
- Comma
- Ident: size
- Colon
- USize
- RParen
- Arrow
- Ident: BuddyAllocator
- Newline
- Indent
- Mut
- Ident: alloc
- Eq
- Ident: BuddyAllocator
- LParen
- Newline
- Indent
- Ident: arena
- Colon
- Ident: arena
- Comma
- Newline
- Ident: arena_size
- Colon
- Ident: size
- Comma
- Newline
- Ident: free_lists
- Colon
- LBracket
- Ident: FreeList
- LParen
- Ident: head
- Colon
- "Null"
- RParen
- Semicolon
- Ident: NUM_LISTS
- RBracket
- Comma
- Newline
- Ident: allocations
- Colon
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- Newline
- Ident: deallocations
- Colon
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Dedent
- RParen
- Newline
- Ident: alloc
- Dot
- Ident: init
- LParen
- RParen
- Newline
- Return
- Ident: alloc
- Newline
- Dedent
- Func
- Bang
- Ident: BuddyAllocator
- ColonColon
- Ident: init
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: header
- Eq
- SelfLower
- Dot
- Ident: arena
- As
- Star
- Mut
- Ident: BlockHeader
- Newline
- Ident: header
- Dot
- Ident: size
- Eq
- SelfLower
- Dot
- Ident: arena_size
- Newline
- Ident: header
- Dot
- Ident: status
- Eq
- Ident: BlockStatus
- ColonColon
- Ident: FREE
- Newline
- Ident: header
- Dot
- Ident: next
- Eq
- "Null"
- Newline
- Ident: header
- Dot
- Ident: prev
- Eq
- "Null"
- Newline
- Let
- Ident: list_index
- Eq
- SelfLower
- Dot
- Ident: size_to_list_index
- LParen
- SelfLower
- Dot
- Ident: arena_size
- RParen
- Newline
- SelfLower
- Dot
- Ident: free_lists
- LBracket
- Ident: list_index
- RBracket
- Dot
- Ident: head
- Eq
- Ident: header
- Newline
- Pass
- Newline
- Dedent
- Func
- Ident: BuddyAllocator
- ColonColon
- Ident: size_to_list_index
- LParen
- Star
- SelfLower
- Comma
- Ident: size
- Colon
- USize
- RParen
- Arrow
- USize
- Newline
- Indent
- Mut
- Ident: index
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Mut
- Ident: block_size
- Eq
- Ident: MIN_BLOCK_SIZE
- Newline
- For
- Ident: i
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- Ident: NUM_LISTS
- RParen
- Newline
- Indent
- If
- Ident: size
- Le
- Ident: block_size
- Newline
- Indent
- Return
- Ident: index
- Newline
- Dedent
- Ident: block_size
- Eq
- Ident: block_size
- Star
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Ident: index
- Eq
- Ident: index
- Plus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Dedent
- Return
- Ident: NUM_LISTS
- Minus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Dedent
- Func
- Bang
- Ident: BuddyAllocator
- ColonColon
- Ident: allocate
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: size
- Colon
- USize
- RParen
- Arrow
- Question
- Star
- Mut
- U8
- Newline
- Indent
- If
- Ident: size
- EqEq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- OrOr
- Ident: size
- Gt
- Ident: MAX_BLOCK_SIZE
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- Let
- Ident: aligned_size
- Eq
- SelfLower
- Dot
- Ident: align_size
- LParen
- Ident: size
- Plus
- Sizeof
- LParen
- Ident: BlockHeader
- RParen
- RParen
- Newline
- Let
- Ident: list_index
- Eq
- SelfLower
- Dot
- Ident: size_to_list_index
- LParen
- Ident: aligned_size
- RParen
- Newline
- Let
- Ident: blok
- Eq
- SelfLower
- Dot
- Ident: find_free_block
- LParen
- Ident: list_index
- RParen
- Newline
- If
- Ident: blok
- EqEq
- "Null"
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- SelfLower
- Dot
- Ident: split_block
- LParen
- Ident: blok
- Comma
- Ident: aligned_size
- RParen
- Newline
- Ident: blok
- Dot
- Ident: status
- Eq
- Ident: BlockStatus
- ColonColon
- Ident: ALLOCATED
- Newline
- SelfLower
- Dot
- Ident: allocations
- Eq
- SelfLower
- Dot
- Ident: allocations
- Plus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Return
- LParen
- Ident: blok
- As
- Star
- Mut
- U8
- RParen
- Plus
- Sizeof
- LParen
- Ident: BlockHeader
- RParen
- Newline
- Dedent
- Func
- Ident: BuddyAllocator
- ColonColon
- Ident: align_size
- LParen
- Star
- SelfLower
- Comma
- Ident: size
- Colon
- USize
- RParen
- Arrow
- USize
- Newline
- Indent
- Mut
- Ident: aligned
- Eq
- Ident: MIN_BLOCK_SIZE
- Newline
- For
- Ident: i
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- Ident: NUM_LISTS
- RParen
- Newline
- Indent
- If
- Ident: aligned
- Ge
- Ident: size
- Newline
- Indent
- Return
- Ident: aligned
- Newline
- Dedent
- Ident: aligned
- Eq
- Ident: aligned
- Star
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Dedent
- Return
- Ident: MAX_BLOCK_SIZE
- Newline
- Dedent
- Func
- Bang
- Ident: BuddyAllocator
- ColonColon
- Ident: find_free_block
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: min_index
- Colon
- USize
- RParen
- Arrow
- Question
- Star
- Mut
- Ident: BlockHeader
- Newline
- Indent
- For
- Ident: i
- In
- Ident: range
- LParen
- Ident: min_index
- Comma
- Ident: NUM_LISTS
- RParen
- Newline
- Indent
- Let
- Ident: head
- Eq
- SelfLower
- Dot
- Ident: free_lists
- LBracket
- Ident: i
- RBracket
- Dot
- Ident: head
- Newline
- If
- Ident: head
- Ne
- "Null"
- Newline
- Indent
- SelfLower
- Dot
- Ident: remove_from_free_list
- LParen
- Ident: head
- Comma
- Ident: i
- RParen
- Newline
- Return
- Ident: head
- Newline
- Dedent
- Dedent
- Return
- "Null"
- Newline
- Dedent
- Func
- Bang
- Ident: BuddyAllocator
- ColonColon
- Ident: split_block
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: blok
- Colon
- Star
- Mut
- Ident: BlockHeader
- Comma
- Ident: size
- Colon
- USize
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- For
- Ident: i
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- IntegerLiteral:
    base: Decimal
    digits: "16"
    suffix: ~
- RParen
- Newline
- Indent
- If
- Ident: blok
- Dot
- Ident: size
- Le
- Ident: size
- Star
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Indent
- Return
- Ident: ok
- Newline
- Dedent
- Let
- Ident: half
- Eq
- Ident: blok
- Dot
- Ident: size
- Slash
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Ident: blok
- Dot
- Ident: size
- Eq
- Ident: half
- Newline
- Let
- Ident: buddy
- Eq
- LParen
- Ident: blok
- As
- Star
- Mut
- U8
- Plus
- Ident: half
- RParen
- As
- Star
- Mut
- Ident: BlockHeader
- Newline
- Ident: buddy
- Dot
- Ident: size
- Eq
- Ident: half
- Newline
- Ident: buddy
- Dot
- Ident: status
- Eq
- Ident: BlockStatus
- ColonColon
- Ident: FREE
- Newline
- Ident: buddy
- Dot
- Ident: next
- Eq
- "Null"
- Newline
- Ident: buddy
- Dot
- Ident: prev
- Eq
- "Null"
- Newline
- Let
- Ident: list_index
- Eq
- SelfLower
- Dot
- Ident: size_to_list_index
- LParen
- Ident: half
- RParen
- Newline
- SelfLower
- Dot
- Ident: add_to_free_list
- LParen
- Ident: buddy
- Comma
- Ident: list_index
- RParen
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: BuddyAllocator
- ColonColon
- Ident: deallocate
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: ptr
- Colon
- Star
- Mut
- U8
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- If
- Ident: ptr
- EqEq
- "Null"
- Newline
- Indent
- Return
- Ident: ok
- Newline
- Dedent
- Let
- Ident: header
- Eq
- LParen
- Ident: ptr
- Minus
- Sizeof
- LParen
- Ident: BlockHeader
- RParen
- RParen
- As
- Star
- Mut
- Ident: BlockHeader
- Newline
- Ident: header
- Dot
- Ident: status
- Eq
- Ident: BlockStatus
- ColonColon
- Ident: FREE
- Newline
- SelfLower
- Dot
- Ident: deallocations
- Eq
- SelfLower
- Dot
- Ident: deallocations
- Plus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- SelfLower
- Dot
- Ident: coalesce
- LParen
- Ident: header
- RParen
- Newline
- Let
- Ident: list_index
- Eq
- SelfLower
- Dot
- Ident: size_to_list_index
- LParen
- Ident: header
- Dot
- Ident: size
- RParen
- Newline
- SelfLower
- Dot
- Ident: add_to_free_list
- LParen
- Ident: header
- Comma
- Ident: list_index
- RParen
- Newline
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: BuddyAllocator
- ColonColon
- Ident: coalesce
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: blok
- Colon
- Star
- Mut
- Ident: BlockHeader
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: buddy_addr
- Eq
- SelfLower
- Dot
- Ident: get_buddy_address
- LParen
- Ident: blok
- RParen
- Newline
- Let
- Ident: buddy
- Eq
- Ident: buddy_addr
- As
- Star
- Mut
- Ident: BlockHeader
- Newline
- If
- SelfLower
- Dot
- Ident: is_valid_buddy
- LParen
- Ident: buddy
- Comma
- Ident: blok
- Dot
- Ident: size
- RParen
- AndAnd
- Ident: buddy
- Dot
- Ident: status
- EqEq
- Ident: BlockStatus
- ColonColon
- Ident: FREE
- Newline
- Indent
- Let
- Ident: list_index
- Eq
- SelfLower
- Dot
- Ident: size_to_list_index
- LParen
- Ident: buddy
- Dot
- Ident: size
- RParen
- Newline
- SelfLower
- Dot
- Ident: remove_from_free_list
- LParen
- Ident: buddy
- Comma
- Ident: list_index
- RParen
- Newline
- Let
- Ident: merged
- Eq
- If
- LParen
- Ident: blok
- As
- USize
- RParen
- Lt
- LParen
- Ident: buddy
- As
- USize
- RParen
- Ident: blok
- Else
- Ident: buddy
- Newline
- Ident: merged
- Dot
- Ident: size
- Eq
- Ident: blok
- Dot
- Ident: size
- Star
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- SelfLower
- Dot
- Ident: coalesce
- LParen
- Ident: merged
- RParen
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Ident: BuddyAllocator
- ColonColon
- Ident: get_buddy_address
- LParen
- Star
- SelfLower
- Comma
- Ident: blok
- Colon
- Star
- Mut
- Ident: BlockHeader
- RParen
- Arrow
- USize
- Newline
- Indent
- Let
- Ident: offset
- Eq
- LParen
- Ident: blok
- As
- USize
- RParen
- Minus
- LParen
- SelfLower
- Dot
- Ident: arena
- As
- USize
- RParen
- Newline
- Return
- LParen
- SelfLower
- Dot
- Ident: arena
- As
- USize
- RParen
- Plus
- LParen
- Ident: offset
- Caret
- Ident: blok
- Dot
- Ident: size
- RParen
- Newline
- Dedent
- Func
- Ident: BuddyAllocator
- ColonColon
- Ident: is_valid_buddy
- LParen
- Star
- SelfLower
- Comma
- Ident: buddy
- Colon
- Star
- Mut
- Ident: BlockHeader
- Comma
- Ident: size
- Colon
- USize
- RParen
- Arrow
- Bool
- Newline
- Indent
- Let
- Ident: buddy_addr
- Eq
- Ident: buddy
- As
- USize
- Newline
- Let
- Ident: arena_start
- Eq
- SelfLower
- Dot
- Ident: arena
- As
- USize
- Newline
- Let
- Ident: arena_end
- Eq
- Ident: arena_start
- Plus
- SelfLower
- Dot
- Ident: arena_size
- Newline
- Return
- Ident: buddy_addr
- Ge
- Ident: arena_start
- AndAnd
- Ident: buddy_addr
- Lt
- Ident: arena_end
- AndAnd
- Ident: buddy
- Dot
- Ident: size
- EqEq
- Ident: size
- Newline
- Dedent
- Func
- Bang
- Ident: BuddyAllocator
- ColonColon
- Ident: add_to_free_list
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: blok
- Colon
- Star
- Mut
- Ident: BlockHeader
- Comma
- Ident: index
- Colon
- USize
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Ident: blok
- Dot
- Ident: next
- Eq
- SelfLower
- Dot
- Ident: free_lists
- LBracket
- Ident: index
- RBracket
- Dot
- Ident: head
- Newline
- Ident: blok
- Dot
- Ident: prev
- Eq
- "Null"
- Newline
- If
- SelfLower
- Dot
- Ident: free_lists
- LBracket
- Ident: index
- RBracket
- Dot
- Ident: head
- Ne
- "Null"
- Newline
- Indent
- SelfLower
- Dot
- Ident: free_lists
- LBracket
- Ident: index
- RBracket
- Dot
- Ident: head
- Dot
- Ident: prev
- Eq
- Ident: blok
- Newline
- Dedent
- SelfLower
- Dot
- Ident: free_lists
- LBracket
- Ident: index
- RBracket
- Dot
- Ident: head
- Eq
- Ident: blok
- Newline
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: BuddyAllocator
- ColonColon
- Ident: remove_from_free_list
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: blok
- Colon
- Star
- Mut
- Ident: BlockHeader
- Comma
- Ident: index
- Colon
- USize
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- If
- Ident: blok
- Dot
- Ident: prev
- Ne
- "Null"
- Newline
- Indent
- Ident: blok
- Dot
- Ident: prev
- Dot
- Ident: next
- Eq
- Ident: blok
- Dot
- Ident: next
- Newline
- Dedent
- Else
- Newline
- Indent
- SelfLower
- Dot
- Ident: free_lists
- LBracket
- Ident: index
- RBracket
- Dot
- Ident: head
- Eq
- Ident: blok
- Dot
- Ident: next
- Newline
- Dedent
- If
- Ident: blok
- Dot
- Ident: next
- Ne
- "Null"
- Newline
- Indent
- Ident: blok
- Dot
- Ident: next
- Dot
- Ident: prev
- Eq
- Ident: blok
- Dot
- Ident: prev
- Newline
- Dedent
- Ident: blok
- Dot
- Ident: next
- Eq
- "Null"
- Newline
- Ident: blok
- Dot
- Ident: prev
- Eq
- "Null"
- Newline
- Pass
- Newline
- Dedent
- Func
- Ident: BuddyAllocator
- ColonColon
- Ident: stats
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Ident: AllocatorStats
- Newline
- Indent
- Return
- Ident: AllocatorStats
- LParen
- Newline
- Indent
- Ident: allocations
- Colon
- SelfLower
- Dot
- Ident: allocations
- Comma
- Newline
- Ident: deallocations
- Colon
- SelfLower
- Dot
- Ident: deallocations
- Comma
- Newline
- Ident: bytes_allocated
- Colon
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Dedent
- RParen
- Newline
- Dedent
- Struct
- Ident: AllocatorStats
- Newline
- Indent
- Ident: allocations
- Colon
- USize
- Newline
- Ident: deallocations
- Colon
- USize
- Newline
- Ident: bytes_allocated
- Colon
- USize
- Newline
- Dedent
