crates/fig-lexer/tests/snapshots/integration_tests__realistic__slab_allocator.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Using
- Ident: core
- ColonColon
- Ident: memory
- Newline
- Const
- Ident: SLAB_SIZE
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "4096"
    suffix: ~
- Newline
- Const
- Ident: MAX_CACHE_SIZE
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "64"
    suffix: ~
- Newline
- Export
- Struct
- Ident: SlabAllocator
- Newline
- Indent
- Ident: slabs
- Colon
- LBracket
- Ident: Slab
- RBracket
- Newline
- Ident: free_slabs
- Colon
- LBracket
- Star
- Mut
- Ident: Slab
- RBracket
- Newline
- Ident: cache
- Colon
- Ident: SlabCache
- Newline
- Dedent
- Struct
- Ident: Slab
- Newline
- Indent
- Ident: memory
- Colon
- Star
- Mut
- U8
- Newline
- Ident: size
- Colon
- USize
- Newline
- Ident: object_size
- Colon
- USize
- Newline
- Ident: objects_per_slab
- Colon
- USize
- Newline
- Ident: free_list
- Colon
- Question
- Star
- Mut
- Ident: FreeNode
- Newline
- Ident: allocated_count
- Colon
- USize
- Newline
- Ident: cache
- Colon
- Question
- Star
- Mut
- Ident: SlabCache
- Newline
- Dedent
- Struct
- Ident: FreeNode
- Newline
- Indent
- Ident: next
- Colon
- Question
- Star
- Mut
- Ident: FreeNode
- Newline
- Dedent
- Struct
- Ident: SlabCache
- Newline
- Indent
- Ident: object_size
- Colon
- USize
- Newline
- Ident: slabs
- Colon
- LBracket
- Star
- Mut
- Ident: Slab
- RBracket
- Newline
- Ident: partial_slabs
- Colon
- LBracket
- Star
- Mut
- Ident: Slab
- RBracket
- Newline
- Ident: full_slabs
- Colon
- LBracket
- Star
- Mut
- Ident: Slab
- RBracket
- Newline
- Ident: free_slabs
- Colon
- LBracket
- Star
- Mut
- Ident: Slab
- RBracket
- Newline
- Ident: total_objects
- Colon
- USize
- Newline
- Ident: allocated_objects
- Colon
- USize
- Newline
- Dedent
- Func
- Bang
- Ident: SlabAllocator
- ColonColon
- Ident: new
- LParen
- RParen
- Arrow
- Ident: SlabAllocator
- Newline
- Indent
- Return
- Ident: SlabAllocator
- LParen
- Newline
- Indent
- Ident: slabs
- Colon
- LBracket
- RBracket
- Comma
- Newline
- Ident: free_slabs
- Colon
- LBracket
- RBracket
- Comma
- Newline
- Ident: cache
- Colon
- Ident: SlabCache
- ColonColon
- Ident: new
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- RParen
- Newline
- Dedent
- RParen
- Newline
- Dedent
- Func
- Bang
- Ident: SlabAllocator
- ColonColon
- Ident: create_cache
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: object_size
- Colon
- USize
- RParen
- Arrow
- Star
- Mut
- Ident: SlabCache
- Newline
- Indent
- Let
- Ident: cache
- Eq
- Ident: SlabCache
- ColonColon
- Ident: new
- LParen
- Ident: object_size
- RParen
- Newline
- Return
- And
- SelfLower
- Dot
- Ident: cache
- Newline
- Dedent
- Func
- Bang
- Ident: SlabAllocator
- ColonColon
- Ident: allocate
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: cache
- Colon
- Star
- Mut
- Ident: SlabCache
- RParen
- Arrow
- Question
- Star
- Mut
- U8
- Newline
- Indent
- Let
- Ident: slab
- Eq
- Ident: cache
- Dot
- Ident: get_partial_slab
- LParen
- RParen
- Newline
- If
- Ident: slab
- EqEq
- "Null"
- Newline
- Indent
- Let
- Ident: new_slab
- Eq
- SelfLower
- Dot
- Ident: allocate_slab
- LParen
- Ident: cache
- Dot
- Ident: object_size
- RParen
- Newline
- If
- Ident: new_slab
- EqEq
- "Null"
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- Ident: cache
- Dot
- Ident: add_slab
- LParen
- Ident: new_slab
- RParen
- Newline
- Return
- SelfLower
- Dot
- Ident: allocate_from_slab
- LParen
- Ident: new_slab
- RParen
- Newline
- Dedent
- Return
- SelfLower
- Dot
- Ident: allocate_from_slab
- LParen
- Ident: slab
- RParen
- Newline
- Dedent
- Func
- Bang
- Ident: SlabAllocator
- ColonColon
- Ident: free
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: ptr
- Colon
- Star
- Mut
- U8
- Comma
- Ident: cache
- Colon
- Star
- Mut
- Ident: SlabCache
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: slab
- Eq
- SelfLower
- Dot
- Ident: find_slab_for_pointer
- LParen
- Ident: ptr
- RParen
- Newline
- If
- Ident: slab
- EqEq
- "Null"
- Newline
- Indent
- Return
- Ident: ok
- Newline
- Dedent
- SelfLower
- Dot
- Ident: free_to_slab
- LParen
- Ident: slab
- Comma
- Ident: ptr
- RParen
- Newline
- Ident: cache
- Dot
- Ident: update_slab_state
- LParen
- Ident: slab
- RParen
- Newline
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: SlabAllocator
- ColonColon
- Ident: allocate_slab
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: object_size
- Colon
- USize
- RParen
- Arrow
- Question
- Star
- Mut
- Ident: Slab
- Newline
- Indent
- Let
- Ident: memory
- Eq
- Ident: allocate_aligned
- LParen
- Ident: SLAB_SIZE
- Comma
- IntegerLiteral:
    base: Decimal
    digits: "16"
    suffix: ~
- RParen
- Newline
- If
- Ident: memory
- EqEq
- "Null"
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- Let
- Ident: slab
- Eq
- Ident: Slab
- ColonColon
- Ident: new
- LParen
- Ident: memory
- Comma
- Ident: SLAB_SIZE
- Comma
- Ident: object_size
- RParen
- Newline
- SelfLower
- Dot
- Ident: slabs
- Dot
- Ident: push
- LParen
- Ident: slab
- RParen
- Newline
- Return
- And
- SelfLower
- Dot
- Ident: slabs
- LBracket
- SelfLower
- Dot
- Ident: slabs
- Dot
- Ident: len
- Minus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- RBracket
- Newline
- Dedent
- Func
- Bang
- Ident: SlabAllocator
- ColonColon
- Ident: allocate_from_slab
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: slab
- Colon
- Star
- Mut
- Ident: Slab
- RParen
- Arrow
- Question
- Star
- Mut
- U8
- Newline
- Indent
- If
- Ident: slab
- Dot
- Ident: free_list
- EqEq
- "Null"
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- Let
- Ident: node
- Eq
- Ident: slab
- Dot
- Ident: free_list
- Newline
- Ident: slab
- Dot
- Ident: free_list
- Eq
- Ident: node
- Dot
- Ident: next
- Newline
- Ident: slab
- Dot
- Ident: allocated_count
- Eq
- Ident: slab
- Dot
- Ident: allocated_count
- Plus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Return
- Ident: node
- As
- Star
- Mut
- U8
- Newline
- Dedent
- Func
- Bang
- Ident: SlabAllocator
- ColonColon
- Ident: free_to_slab
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: slab
- Colon
- Star
- Mut
- Ident: Slab
- Comma
- Ident: ptr
- Colon
- Star
- Mut
- U8
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: node
- Eq
- Ident: ptr
- As
- Star
- Mut
- Ident: FreeNode
- Newline
- Ident: node
- Dot
- Ident: next
- Eq
- Ident: slab
- Dot
- Ident: free_list
- Newline
- Ident: slab
- Dot
- Ident: free_list
- Eq
- Ident: node
- Newline
- If
- Ident: slab
- Dot
- Ident: allocated_count
- Gt
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Ident: slab
- Dot
- Ident: allocated_count
- Eq
- Ident: slab
- Dot
- Ident: allocated_count
- Minus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Ident: SlabAllocator
- ColonColon
- Ident: find_slab_for_pointer
- LParen
- Star
- SelfLower
- Comma
- Ident: ptr
- Colon
- Star
- Mut
- U8
- RParen
- Arrow
- Question
- Star
- Mut
- Ident: Slab
- Newline
- Indent
- For
- Ident: i
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- SelfLower
- Dot
- Ident: slabs
- Dot
- Ident: len
- RParen
- Newline
- Indent
- Let
- Ident: slab
- Eq
- And
- SelfLower
- Dot
- Ident: slabs
- LBracket
- Ident: i
- RBracket
- Newline
- Let
- Ident: slab_start
- Eq
- Ident: slab
- Dot
- Ident: memory
- As
- USize
- Newline
- Let
- Ident: slab_end
- Eq
- Ident: slab_start
- Plus
- Ident: slab
- Dot
- Ident: size
- Newline
- Let
- Ident: ptr_addr
- Eq
- Ident: ptr
- As
- USize
- Newline
- If
- Ident: ptr_addr
- Ge
- Ident: slab_start
- AndAnd
- Ident: ptr_addr
- Lt
- Ident: slab_end
- Newline
- Indent
- Return
- And
- SelfLower
- Dot
- Ident: slabs
- LBracket
- Ident: i
- RBracket
- Newline
- Dedent
- Dedent
- Return
- "Null"
- Newline
- Dedent
- Func
- Bang
- Ident: Slab
- ColonColon
- Ident: new
- LParen
- Ident: memory
- Colon
- Star
- Mut
- U8
- Comma
- Ident: size
- Colon
- USize
- Comma
- Ident: object_size
- Colon
- USize
- RParen
- Arrow
- Ident: Slab
- Newline
- Indent
- Let
- Ident: objects_per_slab
- Eq
- Ident: size
- Slash
- Ident: object_size
- Newline
- Mut
- Ident: slab
- Eq
- Ident: Slab
- LParen
- Newline
- Indent
- Ident: memory
- Colon
- Ident: memory
- Comma
- Newline
- Ident: size
- Colon
- Ident: size
- Comma
- Newline
- Ident: object_size
- Colon
- Ident: object_size
- Comma
- Newline
- Ident: objects_per_slab
- Colon
- Ident: objects_per_slab
- Comma
- Newline
- Ident: free_list
- Colon
- "Null"
- Comma
- Newline
- Ident: allocated_count
- Colon
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- Newline
- Ident: cache
- Colon
- "Null"
- Newline
- Dedent
- RParen
- Newline
- Ident: slab
- Dot
- Ident: initialize_free_list
- LParen
- RParen
- Newline
- Return
- Ident: slab
- Newline
- Dedent
- Func
- Bang
- Ident: Slab
- ColonColon
- Ident: initialize_free_list
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: mut_ptr
- Eq
- SelfLower
- Dot
- Ident: memory
- Newline
- For
- Ident: i
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- SelfLower
- Dot
- Ident: objects_per_slab
- RParen
- Newline
- Indent
- Let
- Ident: offset
- Eq
- Ident: i
- Star
- SelfLower
- Dot
- Ident: object_size
- Newline
- Let
- Ident: node
- Eq
- LParen
- Ident: mut_ptr
- As
- USize
- Plus
- Ident: offset
- RParen
- As
- Star
- Mut
- Ident: FreeNode
- Newline
- If
- Ident: i
- Plus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Lt
- SelfLower
- Dot
- Ident: objects_per_slab
- Newline
- Indent
- Let
- Ident: next_offset
- Eq
- LParen
- Ident: i
- Plus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- RParen
- Star
- SelfLower
- Dot
- Ident: object_size
- Newline
- Ident: node
- Dot
- Ident: next
- Eq
- LParen
- Ident: mut_ptr
- As
- USize
- Plus
- Ident: next_offset
- RParen
- As
- Star
- Mut
- Ident: FreeNode
- Newline
- Dedent
- Else
- Newline
- Indent
- Ident: node
- Dot
- Ident: next
- Eq
- "Null"
- Newline
- Dedent
- Dedent
- SelfLower
- Dot
- Ident: free_list
- Eq
- SelfLower
- Dot
- Ident: memory
- As
- Star
- Mut
- Ident: FreeNode
- Newline
- Pass
- Newline
- Dedent
- Func
- Ident: Slab
- ColonColon
- Ident: is_full
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: allocated_count
- Ge
- SelfLower
- Dot
- Ident: objects_per_slab
- Newline
- Dedent
- Func
- Ident: Slab
- ColonColon
- Ident: is_empty
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: allocated_count
- EqEq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Dedent
- Func
- Ident: Slab
- ColonColon
- Ident: is_partial
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: allocated_count
- Gt
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- AndAnd
- SelfLower
- Dot
- Ident: allocated_count
- Lt
- SelfLower
- Dot
- Ident: objects_per_slab
- Newline
- Dedent
- Func
- Bang
- Ident: SlabCache
- ColonColon
- Ident: new
- LParen
- Ident: object_size
- Colon
- USize
- RParen
- Arrow
- Ident: SlabCache
- Newline
- Indent
- Return
- Ident: SlabCache
- LParen
- Newline
- Indent
- Ident: object_size
- Colon
- Ident: object_size
- Comma
- Newline
- Ident: slabs
- Colon
- LBracket
- RBracket
- Comma
- Newline
- Ident: partial_slabs
- Colon
- LBracket
- RBracket
- Comma
- Newline
- Ident: full_slabs
- Colon
- LBracket
- RBracket
- Comma
- Newline
- Ident: free_slabs
- Colon
- LBracket
- RBracket
- Comma
- Newline
- Ident: total_objects
- Colon
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- Newline
- Ident: allocated_objects
- Colon
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Dedent
- RParen
- Newline
- Dedent
- Func
- Bang
- Ident: SlabCache
- ColonColon
- Ident: add_slab
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: slab
- Colon
- Star
- Mut
- Ident: Slab
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- SelfLower
- Dot
- Ident: slabs
- Dot
- Ident: push
- LParen
- Ident: slab
- RParen
- Newline
- SelfLower
- Dot
- Ident: partial_slabs
- Dot
- Ident: push
- LParen
- Ident: slab
- RParen
- Newline
- SelfLower
- Dot
- Ident: total_objects
- Eq
- SelfLower
- Dot
- Ident: total_objects
- Plus
- Ident: slab
- Dot
- Ident: objects_per_slab
- Newline
- Pass
- Newline
- Dedent
- Func
- Ident: SlabCache
- ColonColon
- Ident: get_partial_slab
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- Question
- Star
- Mut
- Ident: Slab
- Newline
- Indent
- If
- SelfLower
- Dot
- Ident: partial_slabs
- Dot
- Ident: len
- Gt
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: partial_slabs
- LBracket
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- RBracket
- Newline
- Dedent
- Return
- "Null"
- Newline
- Dedent
- Func
- Bang
- Ident: SlabCache
- ColonColon
- Ident: update_slab_state
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: slab
- Colon
- Star
- Mut
- Ident: Slab
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- SelfLower
- Dot
- Ident: remove_from_all_lists
- LParen
- Ident: slab
- RParen
- Newline
- If
- Ident: slab
- Dot
- Ident: is_full
- LParen
- RParen
- Newline
- Indent
- SelfLower
- Dot
- Ident: full_slabs
- Dot
- Ident: push
- LParen
- Ident: slab
- RParen
- Newline
- Dedent
- Elif
- Ident: slab
- Dot
- Ident: is_empty
- LParen
- RParen
- Newline
- Indent
- SelfLower
- Dot
- Ident: free_slabs
- Dot
- Ident: push
- LParen
- Ident: slab
- RParen
- Newline
- Dedent
- Else
- Newline
- Indent
- SelfLower
- Dot
- Ident: partial_slabs
- Dot
- Ident: push
- LParen
- Ident: slab
- RParen
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: SlabCache
- ColonColon
- Ident: remove_from_all_lists
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: slab
- Colon
- Star
- Mut
- Ident: Slab
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- SelfLower
- Dot
- Ident: remove_from_list
- LParen
- And
- SelfLower
- Dot
- Ident: partial_slabs
- Comma
- Ident: slab
- RParen
- Newline
- SelfLower
- Dot
- Ident: remove_from_list
- LParen
- And
- SelfLower
- Dot
- Ident: full_slabs
- Comma
- Ident: slab
- RParen
- Newline
- SelfLower
- Dot
- Ident: remove_from_list
- LParen
- And
- SelfLower
- Dot
- Ident: free_slabs
- Comma
- Ident: slab
- RParen
- Newline
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: SlabCache
- ColonColon
- Ident: remove_from_list
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: list
- Colon
- Star
- Mut
- LBracket
- Star
- Mut
- Ident: Slab
- RBracket
- Comma
- Ident: slab
- Colon
- Star
- Mut
- Ident: Slab
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- For
- Ident: i
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- Ident: list
- Dot
- Ident: len
- RParen
- Newline
- Indent
- If
- Ident: list
- LBracket
- Ident: i
- RBracket
- As
- USize
- EqEq
- Ident: slab
- As
- USize
- Newline
- Indent
- Ident: list
- Dot
- Ident: remove
- LParen
- Ident: i
- RParen
- Newline
- Break
- Newline
- Dedent
- Dedent
- Pass
- Newline
- Dedent
- Func
- Ident: SlabCache
- ColonColon
- Ident: utilization
- LParen
- Star
- SelfLower
- RParen
- Arrow
- F64
- Newline
- Indent
- If
- SelfLower
- Dot
- Ident: total_objects
- EqEq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Return
- FloatLiteral:
    digits: "0.0"
    exponent: ~
    suffix: ~
- Newline
- Dedent
- Return
- LParen
- SelfLower
- Dot
- Ident: allocated_objects
- As
- F64
- RParen
- Slash
- LParen
- SelfLower
- Dot
- Ident: total_objects
- As
- F64
- RParen
- Newline
- Dedent
- Export
- Struct
- Ident: ObjectPool
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: allocator
- Colon
- Ident: SlabAllocator
- Newline
- Ident: cache
- Colon
- Star
- Mut
- Ident: SlabCache
- Newline
- Ident: object_size
- Colon
- USize
- Newline
- Dedent
- Func
- Bang
- Ident: ObjectPool
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: new
- LParen
- RParen
- Arrow
- Ident: ObjectPool
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Mut
- Ident: allocator
- Eq
- Ident: SlabAllocator
- ColonColon
- Ident: new
- LParen
- RParen
- Newline
- Let
- Ident: object_size
- Eq
- Ident: size_of
- LBracket
- Ident: T
- RBracket
- LParen
- RParen
- Newline
- Let
- Ident: cache
- Eq
- Ident: allocator
- Dot
- Ident: create_cache
- LParen
- Ident: object_size
- RParen
- Newline
- Return
- Ident: ObjectPool
- LBracket
- Ident: T
- RBracket
- LParen
- Newline
- Indent
- Ident: allocator
- Colon
- Ident: allocator
- Comma
- Newline
- Ident: cache
- Colon
- Ident: cache
- Comma
- Newline
- Ident: object_size
- Colon
- Ident: object_size
- Newline
- Dedent
- RParen
- Newline
- Dedent
- Func
- Bang
- Ident: ObjectPool
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: allocate
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- Question
- Star
- Mut
- Ident: T
- Newline
- Indent
- Let
- Ident: ptr
- Eq
- SelfLower
- Dot
- Ident: allocator
- Dot
- Ident: allocate
- LParen
- SelfLower
- Dot
- Ident: cache
- RParen
- Newline
- If
- Ident: ptr
- EqEq
- "Null"
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- Return
- Ident: ptr
- As
- Star
- Mut
- Ident: T
- Newline
- Dedent
- Func
- Bang
- Ident: ObjectPool
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: free
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: ptr
- Colon
- Star
- Mut
- Ident: T
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- SelfLower
- Dot
- Ident: allocator
- Dot
- Ident: free
- LParen
- Ident: ptr
- As
- Star
- Mut
- U8
- Comma
- SelfLower
- Dot
- Ident: cache
- RParen
- Newline
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: ObjectPool
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: allocate_init
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: value
- Colon
- Ident: T
- RParen
- Arrow
- Question
- Star
- Mut
- Ident: T
- Newline
- Indent
- Let
- Ident: ptr
- Eq
- SelfLower
- Dot
- Ident: allocate
- LParen
- RParen
- Newline
- If
- Ident: ptr
- Ne
- "Null"
- Newline
- Indent
- Ident: ptr
- Eq
- Ident: value
- Newline
- Dedent
- Return
- Ident: ptr
- Newline
- Dedent
- Func
- Bang
- Ident: allocate_aligned
- LParen
- Ident: size
- Colon
- USize
- Comma
- Ident: alignment
- Colon
- USize
- RParen
- Arrow
- Star
- Mut
- U8
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: size_of
- LBracket
- Ident: T
- RBracket
- LParen
- RParen
- Arrow
- USize
- Newline
- Indent
- Pass
- Newline
- Dedent
